Small design improvements & misc bits.

--- a/frontend/src/app/admin/courses/course-calendar/course-calendar.component.html
+++ b/frontend/src/app/admin/courses/course-calendar/course-calendar.component.html
@@ -3,14 +3,14 @@
 
   <p>
     <a id="add-course-btn" class="button" [routerLink]="['/admin', 'courses', 'add']">
-      <i class="fa fa-plus-circle"></i> New course
+      <i class="far far-plus-circle"></i> New course
     </a>
   </p>
 
   <div class="sl-course-calendar-navigation">
     <div class="sl-course-calendar-nav-left">
       <a [routerLink]="['/admin/courses/calendar', previousMonth.year(), previousMonth.month() + 1]">
-        <i class="fa fa-arrow-circle-left"></i>
+        <i class="far fa-arrow-circle-left"></i>
       </a>
     </div>
 
@@ -25,7 +25,7 @@
 
     <div class="sl-course-calendar-nav-right">
       <a [routerLink]="['/admin/courses/calendar', nextMonth.year(), nextMonth.month() + 1]">
-        <i class="fa fa-arrow-circle-right"></i>
+        <i class="far fa-arrow-circle-right"></i>
       </a>
     </div>
 
@@ -72,13 +72,13 @@
   <div class="sl-course-calendar-navigation">
     <div class="sl-course-calendar-nav-left">
       <a [routerLink]="['/admin/courses/calendar', previousMonth.year(), previousMonth.month() + 1]">
-        <i class="fa fa-arrow-circle-left"></i>
+        <i class="far fa-arrow-circle-left"></i>
       </a>
     </div>
 
     <div class="sl-course-calendar-nav-right">
       <a [routerLink]="['/admin/courses/calendar', nextMonth.year(), nextMonth.month() + 1]">
-        <i class="fa fa-arrow-circle-right"></i>
+        <i class="far fa-arrow-circle-right"></i>
       </a>
     </div>
 
