--- a/frontend/src/app/admin/member-approval/member-approval.component.html
+++ b/frontend/src/app/admin/member-approval/member-approval.component.html
@@ -9,10 +9,10 @@
       <div class="description">Signed up 07/05/2017 at 19:51.</div>
       <div class="controls">
         <button (click)="approveMember(member)" class="approve-button">
-          <i class="fa fa-check"></i>
+          <i class="far fa-check"></i>
         </button>
         <button (click)="rejectMember(member)" class="reject-button">
-          <i class="fa fa-times"></i>
+          <i class="far fa-times"></i>
         </button>
       </div>
     </li>
@@ -26,10 +26,10 @@
       <div class="description">Rejected on 07/05/2017 at 19:51.</div>
       <div class="controls">
         <button (click)="approveMember(member)" class="approve-button">
-          <i class="fa fa-check"></i>
+          <i class="far fa-check"></i>
         </button>
         <button (click)="deleteRejection(member)" class="delete-button">
-          <i class="fa fa-trash"></i>
+          <i class="far fa-trash"></i>
         </button>
       </div>
     </li>
