--- a/frontend/src/app/admin/member/member-view/member-view.component.html
+++ b/frontend/src/app/admin/member/member-view/member-view.component.html
@@ -4,7 +4,7 @@
   <p *ngIf="member">
     <a [routerLink]="['/admin', 'members', member.uuid, 'edit']" id="member-edit-btn" title="Edit member information"
        class="button">
-      <i class="fa fa-pencil" aria-hidden="true"></i> Edit
+      <i class="far fa-pencil" aria-hidden="true"></i> Edit
     </a>
   </p>
 
