--- a/frontend/src/app/committee/header/header.component.html
+++ b/frontend/src/app/committee/header/header.component.html
@@ -13,13 +13,13 @@
   <div id="social-icons">
     <div id="twitter-icon">
       <a href="https://twitter.com/LeedsSkyDivers" title="Leeds Skydivers on Twitter">
-        <i class="fa fa-twitter-square"></i>
+        <i class="fab fa-twitter"></i>
       </a>
     </div>
 
     <div id="facebook-icon">
       <a href="https://www.facebook.com/leedsuniskydivers" title="Leeds Skydivers on Facebook">
-        <i class="fa fa-facebook-square"></i>
+        <i class="fab fa-facebook"></i>
       </a>
     </div>
   </div>
