--- a/frontend/src/app/members/dashboard/profile/profile.component.html
+++ b/frontend/src/app/members/dashboard/profile/profile.component.html
@@ -1,5 +1,5 @@
 <p>
-  <i class="fa fa-user" aria-hidden="true"></i>
+  <i class="fab fa-user" aria-hidden="true"></i>
   <span *ngIf="hasName()">Hello, {{basicInfo.firstName}}!</span>
   <span *ngIf="!hasName()">Hello!</span>
 </p>
