--- a/frontend/src/app/members/members.component.html
+++ b/frontend/src/app/members/members.component.html
@@ -4,8 +4,10 @@
   <div id="footer-wrapper">
     <footer>
       <p>
-        &copy; 2017 Leeds University Skydivers. Website sloppily hacked together by <a
-        href="http://jsherz.com">jSherz.</a> Powered by carrots.
+        &copy;
+        2018
+        Leeds University Skydivers. <a href="/members">Members area</a>.
+        Powered by caffeine, carrots and <a href="http://jsherz.com">jSherz</a>.
       </p>
     </footer>
   </div>
