--- a/frontend/src/app/members/not-approved/not-approved.component.html
+++ b/frontend/src/app/members/not-approved/not-approved.component.html
@@ -13,7 +13,7 @@
 <div id="login-wrapper">
   <div id="login">
     <p id="warning-triangle-wrapper">
-      <i class="fa fa-exclamation-triangle" aria-hidden="true"></i>
+      <i class="fab fa-exclamation-triangle" aria-hidden="true"></i>
     </p>
     <p>
       Your account has not yet been activated. Speak to a committee member or post on our Facebook group.
