--- a/frontend/src/app/pages/contact/contact.component.html
+++ b/frontend/src/app/pages/contact/contact.component.html
@@ -8,7 +8,7 @@
   <dl>
     <dt>
       <a href="https://www.facebook.com/groups/shockabrah">
-        <i class="fa fa-facebook-square"></i>
+        <i class="fab fa-facebook"></i>
         Facebook group
       </a>
     </dt>
@@ -21,7 +21,7 @@
 
     <dt>
       <a href="https://twitter.com/LeedsSkyDivers">
-        <i class="fa fa-twitter-square"></i>
+        <i class="fab fa-twitter"></i>
         Twitter
       </a>
     </dt>
@@ -31,7 +31,7 @@
 
     <dt>
       <a href="https://www.facebook.com/leedsuniskydivers">
-        <i class="fa fa-facebook-square"></i>
+        <i class="fab fa-facebook"></i>
         Facebook page
       </a>
     </dt>
@@ -40,8 +40,18 @@
     </dd>
 
     <dt>
+      <a href="https://www.instagram.com/leedsskydivers/">
+        <i class="fab fa-instagram"></i>
+        Instagram
+      </a>
+    </dt>
+    <dd>
+      Hashtag no filter for our skydiving pics.
+    </dd>
+
+    <dt>
       <a href="mailto:leedsskydivers@gmail.com">
-        <i class="fa fa-envelope"></i>
+        <i class="fas fa-envelope"></i>
         E-mail
       </a>
     </dt>
