--- a/frontend/src/app/pages/faq/faq.component.html
+++ b/frontend/src/app/pages/faq/faq.component.html
@@ -12,7 +12,7 @@
     <ul class="faqs">
       <li>
         <h4>
-          <i class="fa fa-comment-o"></i>
+          <i class="fas fa-comment"></i>
 
           How much does it cost to join?
         </h4>
@@ -22,7 +22,7 @@
 
       <li>
         <h4>
-          <i class="fa fa-comment-o"></i>
+          <i class="fas fa-comment"></i>
 
           How do I join?
         </h4>
@@ -30,14 +30,14 @@
         <p>
           We recommend coming along to one of our socials (check the <a href="https://www.facebook.com/groups/shockabrah">
           Facebook group</a> to find out when and where). After you've decided you were right, skydiving is the best
-          idea ever, you can buy membership on the <a href="http://www.leedsuniversityunion.org.uk/groups/skydiving/"
+          idea ever, you can buy membership on the <a href="http://www.luu.org.uk/skydiving/"
              title="Skydiving on the Leeds University Union website.">Union page</a>.
         </p>
       </li>
 
       <li>
         <h4>
-          <i class="fa fa-comment-o"></i>
+          <i class="fas fa-comment"></i>
 
           I'm not quite up for being a solo skydiver just yet, can I do a tandem?
         </h4>
@@ -51,7 +51,7 @@
 
       <li>
         <h4>
-          <i class="fa fa-comment-o"></i>
+          <i class="fas fa-comment"></i>
 
           Are there any limiting factors?
         </h4>
@@ -64,7 +64,7 @@
 
       <li>
         <h4>
-          <i class="fa fa-comment-o"></i>
+          <i class="fas fa-comment"></i>
 
           Is it safe?
         </h4>
@@ -102,7 +102,7 @@
 
       <li>
         <h4>
-          <i class="fa fa-comment-o"></i>
+          <i class="fas fa-comment"></i>
 
           Is it expensive?
         </h4>
@@ -127,7 +127,7 @@
     <ul>
       <li>
         <h4>
-          <i class="fa fa-comment-o"></i>
+          <i class="fas fa-comment"></i>
 
           How much does each jump cost?
         </h4>
@@ -139,7 +139,7 @@
 
       <li>
         <h4>
-          <i class="fa fa-comment-o"></i>
+          <i class="fas fa-comment"></i>
 
           How much is the initial training fee?
         </h4>
@@ -149,7 +149,7 @@
 
       <li>
         <h4>
-          <i class="fa fa-comment-o"></i>
+          <i class="fas fa-comment"></i>
 
           How many jumps will it be until I qualify as an experienced skydiver?
         </h4>
