--- a/frontend/src/app/pages/home/home.component.html
+++ b/frontend/src/app/pages/home/home.component.html
@@ -1,22 +1,29 @@
-<div id="intro-snippet">
-  <p>
-    <a href="http://www.leedsuniversityunion.org.uk/groups/skydiving/" title="Join us now">Join us now</a> and start
-    skydiving for just &pound;175!
-  </p>
-</div>
+<div id="frontpage-top">
+  <div id="intro-snippet">
+    <h2>How do I get started?</h2>
 
-<div id="xdream">
-  <div id="xdream-logo">
-    <a href="https://xdsports.uk">
-      <img src="/assets/images/xdream.png" title="XDream skydiving gear store" alt="XDream skydiving gear store">
-    </a>
+    <p>
+      <a href="http://www.luu.org.uk/skydiving/" title="Join us now">Join us now</a> and start
+      skydiving for just &pound;175!
+    </p>
   </div>
 
-  <div id="xdream-introductionayy">
-    <p>
-      Thank you to our awesome sponsors, <a href="https://xdsports.uk">XDream</a>. Fingers turning to blocks of ice? Check
-      them out for glove liners. 5 'o clock shadow freezing in the frosty air? Grab a buff or full-face helmet.
-    </p>
+  <div id="xdream">
+    <h2>Experienced jumpers, get kitted out:</h2>
+
+    <div id="xdream-inner">
+      <div id="xdream-logo">
+        <a href="https://xdsports.uk">
+          <img src="/assets/images/xdream.png" title="XDream skydiving gear store" alt="XDream skydiving gear store">
+        </a>
+      </div>
+
+      <div id="xdream-introduction">
+        <p>
+          Check out our sponsor, <a href="https://xdsports.uk">XDream</a>.
+        </p>
+      </div>
+    </div>
   </div>
 </div>
 
