--- a/frontend/src/assets/css/_base.sass
+++ b/frontend/src/assets/css/_base.sass
@@ -1,7 +1,9 @@
 @import 'bourbon/bourbon'
 @import 'neat/neat'
 @import 'base/base'
-@import 'font-awesome/font-awesome'
+@import 'font-awesome/fontawesome'
+@import 'font-awesome/brands'
+@import 'font-awesome/solid'
 @import 'variables'
 
 @mixin error-box
@@ -12,6 +14,7 @@
   box-sizing: border-box
 
 body
+  margin: 0
   background: url('/assets/images/bg-tile.png') repeat
   padding-top: 1.5em
 
