--- a/frontend/src/assets/css/_variables.sass
+++ b/frontend/src/assets/css/_variables.sass
@@ -6,5 +6,6 @@ $notice-colour: #feffd2
 
 $facebook-blue: #3b5999
 $twitter-blue: rgb(85, 172, 238)
+$instagram-maroon: #cd486b
 
 $navbar-hover-colour: lighten($lsd_blue, 50%)
