--- a/frontend/src/app/admin/member/member-search/member-search.component.html
+++ b/frontend/src/app/admin/member/member-search/member-search.component.html
@@ -1,7 +1,7 @@
 <div class="member-search">
   <input type="text" id="member-search-term" [(ngModel)]="searchTerm">
   <button id="member-search-button" [disabled]="searchTerm.length == 0" (click)="performSearch()">
-    <i class="fa fa-search" aria-hidden="true" title="Search"></i>
+    <i class="far fa-search" aria-hidden="true" title="Search"></i>
   </button>
 
   <ul id="member-search-results" *ngIf="hasSearched">
