--- a/frontend/src/app/members/login/login.component.html
+++ b/frontend/src/app/members/login/login.component.html
@@ -15,7 +15,7 @@
     <p>Login to view your course booking and membership information.</p>
 
     <p id="login-button">
-      <a class="button" [href]="loginUrl"><i class="fa fa-facebook"></i> Login with Facebook</a>
+      <a class="button" [href]="loginUrl"><i class="fab fa-facebook"></i> Login with Facebook</a>
     </p>
 
     <hr>
