--- a/frontend/src/app/pages/about/about.component.html
+++ b/frontend/src/app/pages/about/about.component.html
@@ -26,7 +26,7 @@
 </p>
 
 <p>
-  <a id="join-button" href="http://www.leedsuniversityunion.org.uk/groups/skydiving/" class="button">
+  <a id="join-button" href="http://www.luu.org.uk/skydiving/" class="button">
     Join Leeds University Skydivers
   </a>
 </p>
