Out with the old, in with the new.

--- a/frontend/src/app/pages/about/about.component.html
+++ b/frontend/src/app/pages/about/about.component.html
@@ -12,17 +12,16 @@
 </p>
 
 <p>
-  Our current home dropzone is <a href="http://www.britishparachuteschools.com/">BPS Langar</a>, situated just outside
+  Our current home dropzone is <a href="https://www.skydivelangar.co.uk/">Skydive Langar</a>, situated just outside
   of Nottingham. The dropzone is the largest civilian dropzone in the UK, hosting tandems and fun jumpers every day of
-  the year (except Christmas Day). The dropzone also hosts Nottingham, Birmingham, Warwick, London and Loughborough
-  University skydiving clubs, ensuring there are always lots of new students to meet.
+  the year (except Christmas Day). The dropzone also hosts Birmingham, Edinburgh, Nottingham, London, Southampton and
+  York University skydiving clubs, ensuring there are always lots of new students to meet.
 </p>
 
 <p>
   We are held together as a club by our passion for all avenues of the sport; becoming a member means being welcomed into
   a club that will help you from your first jump to your 1000th. The club is very sociable, hosting weekly events at
-  varying locations (check <a href="https://www.facebook.com/groups/shockabrah">our Facebook</a> if you want to find out
-  more).
+  varying locations.
 </p>
 
 <p>
@@ -40,9 +39,9 @@
     <a href="http://www.flyaerodyne.com/">Aerodyne Research</a>
   </li>
   <li>
-    <a href="http://www.bpa.org.uk/">British Parachute Association (BPA)</a>
+    <a href="https://britishskydiving.org/">British Skydiving</a>
   </li>
   <li>
-    <a href="https://www.bcpa.org.uk/">British Collegiate Parachute Association (BCPA)</a>
+    <a href="https://buskydiving.org">British University Skydiving</a>
   </li>
 </ul>
