--- a/frontend/src/app/pages/contact/contact.component.html
+++ b/frontend/src/app/pages/contact/contact.component.html
@@ -7,16 +7,16 @@
 
   <dl>
     <dt>
-      <a href="https://www.facebook.com/groups/shockabrah">
+      <a href="https://www.facebook.com/leedsuniskydivers">
         <i class="fab fa-facebook"></i>
-        Facebook group
+        Facebook page
       </a>
     </dt>
     <dd>
       Join our group and a member of the committee should message you letting you know about how to get involved with
       the club. Make sure that you check your <strong>'Other'</strong> folder as that's where it will most likely end up!
 
-      Post in the group or message a member of the committee (see the list on the right).
+      Post on the page or message a member of the committee.
     </dd>
 
     <dt>
