--- a/frontend/src/app/pages/faq/faq.component.html
+++ b/frontend/src/app/pages/faq/faq.component.html
@@ -17,7 +17,7 @@
           How much does it cost to join?
         </h4>
 
-        <p>&pound;22.00 for the year, entitling you to cheaper socials, jump tickets and the ability to hire club parachutes.</p>
+        <p>&pound;28.00 for the year, entitling you to cheaper socials, jump tickets and the ability to hire club parachutes.</p>
       </li>
 
       <li>
@@ -28,8 +28,8 @@
         </h4>
 
         <p>
-          We recommend coming along to one of our socials (check the <a href="https://www.facebook.com/groups/shockabrah">
-          Facebook group</a> to find out when and where). After you've decided you were right, skydiving is the best
+          We recommend coming along to one of our socials (check the <a href="https://www.facebook.com/leedsuniskydivers">
+          Facebook page</a> to find out when and where). After you've decided you were right, skydiving is the best
           idea ever, you can buy membership on the <a href="http://www.luu.org.uk/skydiving/"
              title="Skydiving on the Leeds University Union website.">Union page</a>.
         </p>
@@ -96,7 +96,7 @@
           the sport and wish for nothing more than to land safely after every jump. For more information about the
           safety of the sport, please visit our governing body's page:
 
-          <a href="http://www.bpa.org.uk/staysafe/how-safe/">BPA - Stay Safe - How Safe?</a>
+          <a href="https://britishskydiving.org/how-safe/">British Skydiving - How Safe?</a>
         </p>
       </li>
 
@@ -110,8 +110,8 @@
         <p>Not really!</p>
 
         <p>
-          As a trainee skydiver, your jumps will be no more than around &pound;32.00 per skydive and after qualifying,
-          they'll be considerably less (from &pound;16.00). The fact that we subsidise these prices makes learning to
+          As a trainee skydiver, your jumps will be no more than around &pound;37.00 per skydive and after qualifying,
+          they'll be considerably less (from &pound;19.50). The fact that we subsidise these prices makes learning to
           skydive at university the cheapest you will ever get it!
         </p>
 
@@ -133,7 +133,7 @@
         </h4>
 
         <p>
-          We aim to subsidise training jumps down to &pound;36.00 and experienced jumps to &pound;16.00 or less this year.
+          We aim to subsidise training jumps down to &pound;37.00 and experienced jumps to &pound;19.50 or less this year.
         </p>
       </li>
 
@@ -144,7 +144,7 @@
           How much is the initial training fee?
         </h4>
 
-        <p>&pound;175.00 – this includes one skydive and all of your training!</p>
+        <p>&pound;195.00 – this includes one skydive and all of your training!</p>
       </li>
 
       <li>
