--- a/frontend/src/app/pages/prices/prices.component.html
+++ b/frontend/src/app/pages/prices/prices.component.html
@@ -15,7 +15,7 @@
       </p>
     </div>
 
-    <div class="package-price">&pound;18.00</div>
+    <div class="package-price">&pound;19.50</div>
   </li>
 
   <li>
@@ -27,7 +27,7 @@
       </p>
     </div>
 
-    <div class="package-price">&pound;19.00</div>
+    <div class="package-price">&pound;21.00</div>
   </li>
 
   <li>
@@ -35,11 +35,11 @@
       <h3>Static line course (RAPS)</h3>
 
       <p>
-        This price includes the whole training course (ground school) and one skydive. The next skydive is just &pound;20!
+        This price includes the whole training course (ground school) and one skydive.
       </p>
     </div>
 
-    <div class="package-price">&pound;175.00</div>
+    <div class="package-price">&pound;195.00</div>
   </li>
 
   <li>
@@ -55,19 +55,42 @@
       </p>
     </div>
 
-    <div class="package-price">&pound;36.00</div>
+    <div class="package-price">&pound;37.00</div>
   </li>
 
   <li>
     <div class="package-info">
-      <h3>Tandem skydive</h3>
+      <h3>Accelerated Free-Fall (AFF)</h3>
 
       <p>
-        Experience the ultimate thrill without having to operate your own parachute.... Still awesome but it's not
-        cheap!
+        This price includes the whole training course (ground school) and eighteen jumps.
       </p>
     </div>
 
-    <div class="package-price">&pound;230.00</div>
+    <div class="package-price">&pound;1609.00</div>
+  </li>
+
+  <li>
+    <div class="package-info">
+      <h3>Kit hire (12 months)</h3>
+
+      <p>
+        Access to University of Leeds parachutes (rigs), experienced jumpers only.
+      </p>
+    </div>
+
+    <div class="package-price">&pound;80.00</div>
+  </li>
+
+  <li>
+    <div class="package-info">
+      <h3>Alumni kit hire (12 months)</h3>
+
+      <p>
+        Access to University of Leeds parachutes (rigs), experienced alumni jumpers only.
+      </p>
+    </div>
+
+    <div class="package-price">&pound;150.00</div>
   </li>
 </ul>
